added simple pokemon name to add to team, display pokemon via imageURL

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,4 +13,7 @@
     />
   </form>
   <h1 th:text="${p}"></h1>
+  <div th:each="pkmn : ${pkmnTeam}">
+    <img th:src="${pkmn.imageURL}" alt="" />
+  </div>
 </div>
