--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -1,25 +1,51 @@
-<div layout:decorate="~{layout}" layout:fragment="content">
-  <form th:action="@{/register}" method="post" th:object="${user}">
-    <div class="field">
-      <label class="label" for="username">Username</label>
-      <input
-        th:field="*{username}"
-        class="input"
-        type="text"
-        placeholder="Username"
-      />
-    </div>
-    <div class="field">
-      <label class="label" for="password">Password</label>
-      <input
-        th:field="*{password}"
-        class="input"
-        type="text"
-        placeholder="Password"
-      />
-    </div>
-    <div class="field">
-      <button class="button is-link" type="submit">Submit</button>
-    </div>
-  </form>
-</div>
+<!DOCTYPE html>
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+>
+  <head>
+    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">
+      Home Page
+    </title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    />
+  </head>
+  <body class="is-flex is-flex-direction-column" style="min-height: 100vh">
+    <header></header>
+    <main
+      class="is-flex is-justify-content-center is-align-items-center"
+      style="flex: 1"
+    >
+      <form th:action="@{/register}" method="post" th:object="${user}">
+        <div class="field">
+          <label class="label" for="username">Username</label>
+          <input
+            th:field="*{username}"
+            class="input"
+            type="text"
+            placeholder="Username"
+          />
+        </div>
+        <div class="field">
+          <label class="label" for="password">Password</label>
+          <input
+            th:field="*{password}"
+            class="input"
+            type="text"
+            placeholder="Password"
+          />
+        </div>
+        <div class="field">
+          <button class="button is-link" type="submit">Submit</button>
+        </div>
+      </form>
+    </main>
+    <footer></footer>
+  </body>
+</html>
