added random encounter function

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,6 +23,7 @@
           <div class="navbar-start">
             <a class="navbar-item" href="/">Team</a>
             <a class="navbar-item" href="/box">Box</a>
+            <a class="navbar-item" href="/catch">Catch</a>
           </div>
 
           <div class="navbar-end">
