--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,5 +1,5 @@
 <div th:fragment="pkmnPreview">
   <figure class="box image is-128x128">
-    <img th:src="${pkmnInfo.imageURL}" alt="" />
+    <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.name}" />
   </figure>
 </div>
