--- a/src/main/resources/templates/boxhub.html
+++ b/src/main/resources/templates/boxhub.html
@@ -1,8 +1,8 @@
 <div layout:decorate="~{layout}" layout:fragment="content">
   <div class="is-flex is-justify-center">
     <div th:each="box : ${boxes}">
-      <a th:href="@{/box/{boxID}(boxID=${box.userBoxID})}">
-        <h1 th:text="${box.userBoxID}" class="box">aaa</h1>
+      <a th:href="@{/box/{boxId}(boxId=${box.userBoxId})}">
+        <h1 th:text="${box.userBoxId}" class="box">aaa</h1>
       </a>
     </div>
   </div>
