--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
   <div class="fixed-grid">
     <div class="grid">
       <div th:each="pkmn : ${pkmnTeam}">
-        <div th:replace="~{fragments :: pkmnPreview (pkmnInfo=${pkmn})}"></div>
+        <div th:replace="~{fragments/pkmnPreview :: pkmnPreview (pkmnInfo=${pkmn})}"></div>
       </div>
     </div>
   </div>
