--- a/src/main/resources/templates/fragments/pkmnBoxRow.html
+++ b/src/main/resources/templates/fragments/pkmnBoxRow.html
@@ -8,24 +8,5 @@
     </td>
   </tr>
 
-
-  <div th:id="${pkmnInfo.id}" class="modal">
-    <div class="modal-background"></div>
-    <div class="modal-card">
-      <header class="modal-card-head">
-        <p class="modal-card-title is-capitalized" th:text="${pkmnInfo.name}"></p>
-        <button class="delete" aria-label="close"></button>
-      </header>
-      <section class="modal-card-body">
-        <figure class="box image is-128x128">
-          <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.name}" />
-        </figure>
-      </section>
-      <footer class="modal-card-foot">
-        <form th:action="@{/pokemon/{id}(id=${pkmnInfo.id})}" th:method="delete">
-          <button class="button is-danger">Release</button>
-        </form>
-      </footer>
-    </div>
-  </div>
+  <div th:replace="~{fragments/pkmnModal :: pkmnModal (pkmnInfo=${pkmnInfo})}"></div>
 </div>
