--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,6 +15,50 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     />
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        // Functions to open and close a modal
+        function openModal($el) {
+          $el.classList.add('is-active');
+        }
+
+        function closeModal($el) {
+          $el.classList.remove('is-active');
+        }
+
+        function closeAllModals() {
+          (document.querySelectorAll('.modal') || []).forEach(($modal) => {
+            closeModal($modal);
+          });
+        }
+
+        // Add a click event on buttons to open a specific modal
+        (document.querySelectorAll('.modal-trigger') || []).forEach(($trigger) => {
+          const modal = $trigger.dataset.target;
+          const $target = document.getElementById(modal);
+
+          $trigger.addEventListener('click', () => {
+            openModal($target);
+          });
+        });
+
+        // Add a click event on various child elements to close the parent modal
+        (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+          const $target = $close.closest('.modal');
+
+          $close.addEventListener('click', () => {
+            closeModal($target);
+          });
+        });
+
+        // Add a keyboard event to close all modals
+        document.addEventListener('keydown', (event) => {
+          if(event.key === "Escape") {
+            closeAllModals();
+          }
+        });
+      });
+    </script>
   </head>
   <body class="is-flex is-flex-direction-column" style="min-height: 100vh">
     <header>
@@ -33,6 +77,19 @@
                   <strong>Sign up</strong>
                 </a>
                 <a class="button is-light"> Log in </a>
+              </div>
+            </div>
+            <div class="navbar-item has-dropdown is-hoverable">
+              <a class="navbar-link">
+                [[#{change_lang}]]
+              </a>
+              <div class="navbar-dropdown">
+                <a href="?lang=en" class="navbar-item">
+                  [[#{en_lang_switch}]]
+                </a>
+                <a href="?lang=de" class="navbar-item">
+                  [[#{de_lang_switch}]]
+                </a>
               </div>
             </div>
           </div>
