--- a/src/main/resources/templates/fragments/pkmnModal.html
+++ b/src/main/resources/templates/fragments/pkmnModal.html
@@ -15,6 +15,9 @@
         <form th:action="@{/pokemon/{id}(id=${pkmnInfo.id})}" th:method="delete">
           <button class="button is-danger">Release</button>
         </form>
+        <form th:action="@{/pokemon/swap/{swapId}(swapId=${pkmnInfo.id})}" method="post" th:if="${pkmnInfo.isInBox}">
+          <button class="button is-primary">Swap</button>
+        </form>
       </footer>
     </div>
   </div>
