added optional email verification

--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -33,6 +33,15 @@
           />
         </div>
         <div class="field">
+          <label class="label" for="email">Email</label>
+          <input
+            th:field="*{email}"
+            class="input"
+            type="text"
+            placeholder="(Optional) Email"
+          />
+        </div>
+        <div class="field">
           <label class="label" for="password">Password</label>
           <input
             th:field="*{password}"
