added better pokeapi support

--- a/src/main/resources/templates/fragments/pkmnPreview.html
+++ b/src/main/resources/templates/fragments/pkmnPreview.html
@@ -1,7 +1,7 @@
 <div th:fragment="pkmnPreview">
   <div th:class="${enableModal} ? 'modal-trigger' : ''" th:data-target="${pkmnInfo.id}">
     <figure class="box image is-128x128">
-      <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.name}" />
+      <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.displayName}" />
     </figure>
   </div>
 
