--- a/src/main/resources/templates/fragments/pkmnModal.html
+++ b/src/main/resources/templates/fragments/pkmnModal.html
@@ -3,16 +3,18 @@
     <div class="modal-background"></div>
     <div class="modal-card">
       <header class="modal-card-head">
-        <p class="modal-card-title is-capitalized" th:text="${pkmnInfo.name}"></p>
+        <p class="modal-card-title is-capitalized" th:text="${pkmnInfo.displayName}"></p>
         <button class="delete" aria-label="close"></button>
       </header>
       <section class="modal-card-body">
         <figure class="box image is-128x128">
-          <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.name}" />
+          <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.displayName}" />
         </figure>
+        <p class="subtitle is-3" th:text="${pkmnInfo.flavorText}">
+        </p>
       </section>
       <footer class="modal-card-foot">
-        <form th:action="@{/pokemon/{id}(id=${pkmnInfo.id})}" th:method="delete">
+        <form th:action="@{/pokemon/{id}(id=${pkmnInfo.id})}" th:method="delete" th:if="${pkmnInfo.id != -1}">
           <button class="button is-danger">Release</button>
         </form>
         <form th:action="@{/pokemon/swap/{swapId}(swapId=${pkmnInfo.id})}" method="post" th:if="${pkmnInfo.isInBox}">
