fixed some catch errors

--- a/src/main/resources/templates/catchRndPkmn.html
+++ b/src/main/resources/templates/catchRndPkmn.html
@@ -3,7 +3,7 @@
     <figure class="box image is-128x128">
       <img
         th:src="${encounterPkmn.imageURL}"
-        th:alt="${encounterPkmn.name}"
+        th:alt="${encounterPkmn.displayName}"
         id="encounterPkmn"
       />
     </figure>
@@ -23,12 +23,12 @@
       "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/poke-ball.png";
     encounter.src = pokeBallImgURL;
     let isCatchSuccessful = await fetch(
-      `/tryCatchPkmn?name=${encounterPkmnData.name}`
+      `/tryCatchPkmn?name=${encounterPkmnData.apiName}`
     );
-    let data = await isCatchSuccessful.text();
-    if (data === "true") {
+    let data = await isCatchSuccessful.json();
+    if (data.catchSuccessful === true) {
       encounter.style.filter = "brightness(50%)";
-      document.getElementById("helpText").innerHTML = "Caught!";
+      document.getElementById("helpText").innerHTML = data.addMsg;
       document.getElementById("catchButton").disabled = true;
     } else {
       encounter.src = encounterPkmnImgURL;
