--- a/src/main/resources/templates/fragments/pkmnBoxRow.html
+++ b/src/main/resources/templates/fragments/pkmnBoxRow.html
@@ -1,9 +1,9 @@
 <div th:fragment="pkmnBoxRow">
   <tr class="modal-trigger" th:data-target="${pkmnInfo.id}">
-    <td>[[${#strings.capitalize(pkmnInfo.name)}]]</td>
+    <td>[[${#strings.capitalize(pkmnInfo.displayName)}]]</td>
     <td>
       <figure class="box image is-96x96">
-        <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.name}" />
+        <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.displayName}" />
       </figure>
     </td>
   </tr>
