changed image sizes a bit

--- a/src/main/resources/templates/catchRndPkmn.html
+++ b/src/main/resources/templates/catchRndPkmn.html
@@ -1,6 +1,6 @@
 <div layout:decorate="~{layout}" layout:fragment="content">
   <div class="is-flex is-flex-direction-column is-aling-items-center is-gap-3">
-    <figure class="box image is-128x128">
+    <figure class="box image" style="width: 200px;">
       <img
         th:src="${encounterPkmn.imageURL}"
         th:alt="${encounterPkmn.displayName}"
