--- a/src/main/resources/templates/fragments/pkmnModal.html
+++ b/src/main/resources/templates/fragments/pkmnModal.html
@@ -7,11 +7,42 @@
         <button class="delete" aria-label="close"></button>
       </header>
       <section class="modal-card-body">
-        <figure class="box image is-128x128">
-          <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.displayName}" />
-        </figure>
-        <p class="subtitle is-3" th:text="${pkmnInfo.flavorText}">
-        </p>
+        <div class="is-flex is-align-items-center is-gap-3">
+          <figure class="box image is-128x128">
+            <img th:src="${pkmnInfo.imageURL}" th:alt="${pkmnInfo.displayName}" />
+          </figure>
+          <div class="is-flex is-flex-direction-column">
+            <div class="tags are-medium has-addons">
+              <span class="tag is-success">Hp</span>
+              <span class="tag">[[${pkmnInfo.curHp}]]/[[${pkmnInfo.maxHp}]]</span>
+            </div>
+            <div class="is-flex is-gap-3">
+              <div class="tags are-medium has-addons">
+                <span class="tag is-info">Level</span>
+                <span class="tag">[[${pkmnInfo.level}]]</span>
+              </div>
+              <div class="tags are-medium has-addons">
+                <span class="tag is-primary">Exp</span>
+                <span class="tag">[[${pkmnInfo.exp}]]</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tags mt-3">
+          <div class="tags are-medium has-addons"><span class="tag is-danger">Atk</span><span class="tag">[[${pkmnInfo.atk}]]</span></div>
+          <div class="tags are-medium has-addons"><span class="tag is-info">Def</span><span class="tag">[[${pkmnInfo.def}]]</span></div>
+          <div class="tags are-medium has-addons"><span class="tag is-dark">Spa</span><span class="tag">[[${pkmnInfo.spa}]]</span></div>
+          <div class="tags are-medium has-addons"><span class="tag is-primary">Spd</span><span class="tag">[[${pkmnInfo.spd}]]</span></div>
+          <div class="tags are-medium has-addons"><span class="tag is-warning">Spe</span><span class="tag">[[${pkmnInfo.spe}]]</span></div>
+        </div>
+        <div class="tags">
+          <div class="tags are-medium has-addons"><span class="tag is-danger">Base Atk</span><span class="tag">[[${pkmnInfo.atkBase}]]</span></div>
+          <div class="tags are-medium has-addons"><span class="tag is-info">Base Def</span><span class="tag">[[${pkmnInfo.defBase}]]</span></div>
+          <div class="tags are-medium has-addons"><span class="tag is-dark">Base Spa</span><span class="tag">[[${pkmnInfo.spaBase}]]</span></div>
+          <div class="tags are-medium has-addons"><span class="tag is-primary">Base Spd</span><span class="tag">[[${pkmnInfo.spdBase}]]</span></div>
+          <div class="tags are-medium has-addons"><span class="tag is-warning">Base Spe</span><span class="tag">[[${pkmnInfo.speBase}]]</span></div>
+        </div>
+        <p class="subtitle is-3" th:text="${pkmnInfo.flavorText}"></p>
       </section>
       <footer class="modal-card-foot">
         <form th:action="@{/pokemon/{id}(id=${pkmnInfo.id})}" th:method="delete" th:if="${pkmnInfo.id != -1}">
