heal pokemon with currency

--- a/src/main/resources/templates/fragments/pkmnModal.html
+++ b/src/main/resources/templates/fragments/pkmnModal.html
@@ -51,6 +51,14 @@
         <form th:action="@{/pokemon/swap/{swapId}(swapId=${pkmnInfo.id})}" method="post" th:if="${pkmnInfo.isInBox}">
           <button class="button is-primary">Swap</button>
         </form>
+        <form th:action="@{/pokemon/healcost/{id}(id=${pkmnInfo.id})}" method="post">
+          <button class="button is-success">
+            <span class="icon"><i class="fa-solid fa-dollar-sign"></i>[[${healPkmnForCurrencyHealCost}]]</span>
+            <span></span>
+            <span class="mx-1">Heal</span>
+            <span class="icon"><i class="fa-solid fa-heart"></i>[[${healPkmnForCurrencyHealAmount}]]</span>
+          </button>
+        </form>
       </footer>
     </div>
   </div>
