--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,113 +15,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     />
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        function openModal($el) {
-          $el.classList.add('is-active');
-        }
-
-        function closeModal($el) {
-          $el.classList.remove('is-active');
-        }
-
-        function closeAllModals() {
-          (document.querySelectorAll('.modal') || []).forEach(($modal) => {
-            closeModal($modal);
-          });
-        }
-
-        // Add a click event on buttons to open a specific modal
-        (document.querySelectorAll('.modal-trigger') || []).forEach(($trigger) => {
-          const modal = $trigger.dataset.target;
-          const $target = document.getElementById(modal);
-
-          $trigger.addEventListener('click', () => {
-            openModal($target);
-          });
-        });
-
-        // Add a click event on various child elements to close the parent modal
-        (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
-          const $target = $close.closest('.modal');
-
-          $close.addEventListener('click', () => {
-            closeModal($target);
-          });
-        });
-
-        // Add a keyboard event to close all modals
-        document.addEventListener('keydown', (event) => {
-          if(event.key === "Escape") {
-            closeAllModals();
-          }
-        });
-      });
-    </script>
+    <script th:src="@{/openCloseModal.js}"></script>
   </head>
-  <body class="is-flex is-flex-direction-column" style="min-height: 100vh">
-    <header>
-      <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-menu">
-          <div class="navbar-start">
-            <div class="tabs is-large is-toggle is-toggle-rounded">
-              <ul>
-                <li th:classappend="${currentPath == '/'} ? 'is-active' : ''">
-                  <a href="/">
-                    <span class="icon is-small"
-                      ><i class="fas fa-users"></i
-                    ></span>
-                    <span>Team</span>
-                  </a>
-                </li>
-                <li th:classappend="${currentPath.startsWith('/box')} ? 'is-active' : ''">
-                  <a href="/box">
-                    <span class="icon is-small"
-                      ><i class="fas fa-box"></i
-                    ></span>
-                    <span>Box</span>
-                  </a>
-                </li>
-                <li th:classappend="${currentPath.startsWith('/catch')} ? 'is-active' : ''">
-                  <a href="/catch">
-                    <span class="icon is-small"
-                      ><i class="fas fa-bullseye"></i
-                    ></span>
-                    <span>Catch</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
 
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <strong>You have $[[${userCurrency}]]</strong>
-            </div>
-            <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link">
-                [[#{change_lang}]]
-              </a>
-              <div class="navbar-dropdown">
-                <a href="?lang=en" class="navbar-item">
-                  [[#{en_lang_switch}]]
-                </a>
-                <a href="?lang=de" class="navbar-item">
-                  [[#{de_lang_switch}]]
-                </a>
-              </div>
-            </div>
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="button is-danger" href="/logout">
-                  <strong>Logout</strong>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
+  <body class="is-flex is-flex-direction-column" style="min-height: 100vh">
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
     <main
       class="is-flex is-justify-content-center is-align-items-center"
       style="flex: 1"
@@ -129,5 +27,7 @@
       <div layout:fragment="content">Default content</div>
     </main>
     <footer></footer>
+
+    <div th:replace="~{fragments/notifications :: notifications}"></div>
   </body>
 </html>
