--- a/src/main/resources/templates/fragments/pkmnModal.html
+++ b/src/main/resources/templates/fragments/pkmnModal.html
@@ -30,25 +30,25 @@
         </div>
         <p class="subtitle">Moves</p>
         <div class="tags are-medium">
-          <span class="tag is-info">[[${pkmnInfo.move1}]]</span>
-          <span class="tag is-info">[[${pkmnInfo.move3}]]</span>
-          <span class="tag is-info">[[${pkmnInfo.move3}]]</span>
-          <span class="tag is-info">[[${pkmnInfo.move4}]]</span>
+          <span class="tag is-info">[[${pkmnInfo.allMoves.move1.displayName}]]</span>
+          <span class="tag is-info">[[${pkmnInfo.allMoves.move2.displayName}]]</span>
+          <span class="tag is-info">[[${pkmnInfo.allMoves.move3.displayName}]]</span>
+          <span class="tag is-info">[[${pkmnInfo.allMoves.move4.displayName}]]</span>
         </div>
         <p class="subtitle">Stats</p>
         <div class="tags are-medium">
-          <div class="tags has-addons"><span class="tag is-danger">Atk</span><span class="tag">[[${pkmnInfo.atk}]]</span></div>
-          <div class="tags has-addons"><span class="tag is-info">Def</span><span class="tag">[[${pkmnInfo.def}]]</span></div>
-          <div class="tags has-addons"><span class="tag is-dark">Spa</span><span class="tag">[[${pkmnInfo.spa}]]</span></div>
-          <div class="tags has-addons"><span class="tag is-primary">Spd</span><span class="tag">[[${pkmnInfo.spd}]]</span></div>
-          <div class="tags has-addons"><span class="tag is-warning">Spe</span><span class="tag">[[${pkmnInfo.spe}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-danger">Atk</span><span class="tag">[[${pkmnInfo.allStats.atk.statValue}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-info">Def</span><span class="tag">[[${pkmnInfo.allStats.def.statValue}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-dark">Spa</span><span class="tag">[[${pkmnInfo.allStats.spa.statValue}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-primary">Spd</span><span class="tag">[[${pkmnInfo.allStats.spd.statValue}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-warning">Spe</span><span class="tag">[[${pkmnInfo.allStats.spe.statValue}]]</span></div>
         </div>
         <div class="tags are-medium">
-          <div class="tags has-addons"><span class="tag is-danger">Base Atk</span><span class="tag">[[${pkmnInfo.atkBase}]]</span></div>
-          <div class="tags has-addons"><span class="tag is-info">Base Def</span><span class="tag">[[${pkmnInfo.defBase}]]</span></div>
-          <div class="tags has-addons"><span class="tag is-dark">Base Spa</span><span class="tag">[[${pkmnInfo.spaBase}]]</span></div>
-          <div class="tags has-addons"><span class="tag is-primary">Base Spd</span><span class="tag">[[${pkmnInfo.spdBase}]]</span></div>
-          <div class="tags has-addons"><span class="tag is-warning">Base Spe</span><span class="tag">[[${pkmnInfo.speBase}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-danger">Base Atk</span><span class="tag">[[${pkmnInfo.allStats.atk.baseStat}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-info">Base Def</span><span class="tag">[[${pkmnInfo.allStats.def.baseStat}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-dark">Base Spa</span><span class="tag">[[${pkmnInfo.allStats.spa.baseStat}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-primary">Base Spd</span><span class="tag">[[${pkmnInfo.allStats.spd.baseStat}]]</span></div>
+          <div class="tags has-addons"><span class="tag is-warning">Base Spe</span><span class="tag">[[${pkmnInfo.allStats.spe.baseStat}]]</span></div>
         </div>
         <p class="subtitle is-3" th:text="${pkmnInfo.flavorText}"></p>
       </section>
